--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js"
   },
-  "dependencies": {
+  "d	ependencies": {
     "assert": "^1.4.1",
     "aws-sdk": "^2.259.1",
     "body-parser": "^1.18.3",
@@ -23,9 +23,6 @@
     "passport": "^0.4.0"
   },
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
+  "author": "himanshu",
   "license": "ISC"
 }
