--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "node index.js"
   },
-  "d	ependencies": {
+  "engines": {
+    "node": ">=6.11.3",
+    "npm": ">=5.6.0"
+  },    
+  "dependencies": {
     "assert": "^1.4.1",
     "aws-sdk": "^2.259.1",
     "body-parser": "^1.18.3",
